--- a/style.css
+++ b/style.css
@@ -35,4 +35,20 @@ header .calendar-navigation span {
 
 .calendar-body ul {
   list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+  text-align: center;
+  margin-left: -40px;
+}
+
+.calendar-body li {
+  width: calc(100% / 7);
+}
+
+.calendar-body .calendar-weekdays li {
+  font-weight: bold;
+}
+
+.calendar-body .calendar-dates li {
+  margin-top: 30px;
 }
