--- a/style.css
+++ b/style.css
@@ -8,11 +8,14 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  background-color: darkcyan;
 }
 
 .calendar-container {
   background: cornflowerblue;
   width: 450px;
+  border-radius: 10px;
+  margin-top: 20px;
 }
 
 .calendar-container header {
